--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.12.RELEASE</version>
         </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>4.3.12.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-tx</artifactId>
+          <version>4.3.12.RELEASE</version>
+      </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
@@ -57,10 +67,12 @@
             <version>1.3.0</version>
         </dependency>
       <dependency>
-          <groupId>org.apache.commons</groupId>
-          <artifactId>commons-dbcp2</artifactId>
-          <version>2.1.1</version>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>1.1.6</version>
       </dependency>
+
+
       <!--日志-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -85,6 +97,11 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
         </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>RELEASE</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>Friends</finalName>
@@ -102,6 +119,11 @@
             </resource>
         </resources>
       <testSourceDirectory>src/test/java</testSourceDirectory>
+      <testResources>
+          <testResource>
+              <directory>src/test/resources</directory>
+          </testResource>
+      </testResources>
       <plugins>
         	<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
