--- a/pom.xml
+++ b/pom.xml
@@ -105,16 +105,17 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-      <dependency>
-          <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter-api</artifactId>
-          <version>RELEASE</version>
-      </dependency>
 
       <!--安全shiro -->
       <dependency>
           <groupId>org.apache.shiro</groupId>
           <artifactId>shiro-core</artifactId>
+          <version>1.4.0</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-web</artifactId>
           <version>1.4.0</version>
       </dependency>
   </dependencies>
