--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,20 +6,9 @@
          version="3.1"
          metadata-complete="true">
     <display-name>Archetype Created Web Application</display-name>
-    <!-- The filter-name matches name of a 'shiroFilter' bean inside applicationContext.xml -->
-    <!--<filter>-->
-        <!--<filter-name>shiroFilter</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>targetFilterLifecycle</param-name>-->
-            <!--<param-value>true</param-value>-->
-        <!--</init-param>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>shiroFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
-
+    <welcome-file-list>
+        <welcome-file>/</welcome-file>
+    </welcome-file-list>
     <!--post乱码过滤器-->
     <!-- 配置springMVC编码过滤器 -->
     <filter>
@@ -73,4 +62,11 @@
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+<session-config>
+    <session-timeout>180</session-timeout>
+</session-config>
+<error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/view/404.jsp</location>
+</error-page>
 </web-app>
